# Financial-analysis

./: .cursorrules  .env.example  .gitignore  30_Stocks_Final_10_JPAM_March2026.docx  AI_Infrastructure_v5_FullPipeline_Mar2026.docx  ARCHITECTURE.md  BACKEND_ARCHITECTURE_ASSESSMENT.md  Definitive_AI_Infrastructure_15_Stocks_JPAM_March2026.docx  E2E_TESTING_RUNBOOK.md  FRONTEND_COMPARISON.md  Final_Detailed_Agent_Service_and_Build_Spec_v8.md  Final_Master_Pipeline_Blueprint_v8.md  IMPROVEMENTS.md  IMPROVEMENTS_2.0.md  MULTI_AGENT_BUILD_PLAN.md  PIPELINE_STAGES.md  PROJECT_ISSUES_ASSESSMENT.md  PROJECT_README.md  ROADMAP.md  RUNBOOK.md  SESSION_18_SUMMARY.md  SESSION_19_SUMMARY.md  SESSION_20_SUMMARY.md  TRACKER.md  V6_Agent_Specifications_and_Build_Guide.md  V6_Master_Pipeline_Blueprint.md  associate-reviewer.skill  evidence-librarian.skill  final_pipeline_config_v8.yaml  portfolio-manager.skill  portfolio-synthesiser.skill  pyproject.toml  red-team-analyst.skill  requirements.txt  research-pipeline-orchestrator.skill  sector-analyst-compute.skill  sector-analyst-infrastructure.skill  sector-analyst-power-energy.skill  v6_pipeline_config.yaml  valuation-analyst.skill
.cursor/: mcp.json
Bloomberg rewrite/: HANDOFF.md  bloomberg_mockup.jsx  dashboard-page.tsx  globals.css  meridian_improvements.docx  metric-card.tsx  pipeline-tracker.tsx  runs-new-page.tsx  runs-page.tsx  sidebar.tsx  top-bar.tsx
configs/: pipeline.yaml  thresholds.yaml  universe.yaml
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
output/: live_test_run_output.md
prompts/: associate_reviewer.md  evidence_librarian.md  macro_strategist.md  orchestrator.md  political_risk.md  portfolio_manager.md  portfolio_synthesiser.md  red_team.md  sector_compute.md  sector_infrastructure.md  sector_power_energy.md  valuation_analyst.md
reports/: report_run_20260407_234702_87350327_20260407.md
scripts/: live_test_run.py
tests/: conftest.py  test_deferred_items.py  test_expand_universe.py  test_gates.py  test_governance.py  test_memory_audit.py  test_new_schemas.py  test_next_section.py  test_performance_services.py  test_phase1_hardening.py  test_phase6_7.py  test_pipeline.py  test_prompt_regression.py  test_quant_engines.py  test_schemas.py  test_services.py  test_session10.py  test_session11.py  test_session12.py  test_session13.py  test_session14.py  test_session15.py  test_session16.py  test_session17.py  test_session18.py  test_session19.py  test_session20.py  test_session5.py  test_session6.py  test_session7.py  test_session8.py  test_session9.py  test_smoke_pipeline.py  test_supervisor.py
(+488 files in other folders)
