[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-infrastructure-research-platform"
version = "8.0.0"
description = "Public-source, institutional-style AI infrastructure research and portfolio platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2",
    "pyarrow>=14.0",
    "openai>=1.10",
    "rich>=13.0",
    "typer>=0.9",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    # Session 15: FastAPI event-streaming API layer
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
research-pipeline = "cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Streamlit app files: imports must come after sys.path setup (E402),
# and single-line conditionals are used for compact readability (E701).
"src/frontend/app.py" = ["E402", "E701", "F841"]
"src/frontend/pipeline_runner.py" = ["E402", "E701", "F841"]
# Qualitative service: import after conditional availability check
"src/research_pipeline/services/qualitative_data_service.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
